--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -125,6 +125,7 @@
   height: 50px;
   width: 200px;
   transition: 0.5s;
+  cursor: pointer;
 }
 
 .incorrect-password-button:hover {
@@ -148,6 +149,7 @@
   height: 50px;
   width: 300px;
   transition: 0.5s;
+  cursor: pointer;
 }
 
 .incorrect-email-button:hover {
@@ -215,31 +217,30 @@ body {
   border: 1px solid white;
   border-radius: 10px;
   margin-bottom: 30px;
-  padding: 10px;
-  width: 100px;
-  transition: 1s;
+  padding: 20px;
+  width: 350px;
+  height: 100px;
   cursor: pointer;
 }
 
 .take-div:hover {
-  background-color: rgb(255, 255, 255);
-  border: 1px solid rgb(230, 183, 62);
-  color: rgb(230, 183, 62);
+  background-color: rgb(50, 50, 50);
 }
 
 .take-div-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 400px;
+  width: 1200px;
   height: 400px;
+  margin-bottom: 325px;
 }
 
 .home-page {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  margin-top: 75px;
 }
 
 .single-post-div {
@@ -483,7 +484,7 @@ body {
   transform: scaleY(1);
   transform-origin: top;
   transition: transform 0.8s, height 0.8s;
-  animation: dropdown 0.4s;
+  animation: dropdown 0.15s;
 }
 
 @keyframes dropdown {
@@ -717,7 +718,7 @@ body {
 }
 
 .add-post-form {
-  margin-top: 150px;
+  margin-top: 25px;
   border: 2px solid rgb(230, 183, 62);
   border-radius: 20px;
   height: 650px;
@@ -991,7 +992,7 @@ body {
   height: 500px;
   position: fixed;
   right: 0%;
-  top: 7.4%;
+  top: 65px;
   background-color: white;
   z-index: 1000;
 }
@@ -1114,4 +1115,184 @@ body {
 .profile-edit-submit-button:hover {
   color: rgb(230, 183, 62);
   border: 1px solid rgb(230, 183, 62);
+}
+
+.disclaimer-div {
+  margin-top: 124px;
+  height: 140px;
+  display: flex;
+  justify-content: center;
+}
+
+.disclaimer {
+  background-color: rgb(45, 45, 45);
+  width: 60%;
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid grey;
+  color: grey;
+}
+
+.confirm {
+  margin-top: 20px;
+  border: 1px solid grey;
+  width: 50px;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.confirm:hover {
+  border: 1px solid rgb(230, 183, 62);
+  color: rgb(230, 183, 62);
+}
+
+.title-totals-likes-div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.totals-likes-div {
+  display: flex;
+  width: 100px;
+  justify-content: space-between;
+}
+
+.full-first-five-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 150px;
+}
+
+.first-five-container {
+  width: 1200px;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.first-five-div {
+  height: 100px;
+  border: 1px solid white;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  color: white;
+}
+
+.first-five-div:hover {
+  background-color: rgb(40, 40, 40);
+}
+
+.for-you-divide {
+  border-bottom: 1px solid white;
+  padding: 5px;
+  width: 75px;
+  margin-bottom: 25px;
+  color: white;
+}
+
+.main-footer {
+  height: 75px;
+  width: 100%;
+}
+
+.footer {
+  background-color: white;
+  height: 75px;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.footer-div {
+  font-size: 20px;
+  cursor: pointer
+}
+
+.footer-div:hover {
+  color: rgb(230, 183, 62);
+}
+
+.about-the-creator-div {
+  height: 549px;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+}
+
+.image {
+  border: 2px solid rgb(230, 183, 62);
+}
+
+.my-links {
+  color: grey;
+}
+
+.my-links:hover {
+  color: rgb(230, 183, 62);
+}
+
+.rules-div {
+  padding: 20px;
+  height: 509px;
+  width: 96.88%;
+  background-color: white;
+  font-size: 18px;
+}
+
+.search-container {
+  height: 100px;
+  margin-top: 11px;
+}
+
+.each-searched-item {
+  height: 75px;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.each-searched-item:hover {
+  background-color: rgb(197, 197, 197);
+}
+
+
+.search-circle-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.full-search-circle-container {
+  display: flex;
+  align-items: center;
+  height: 300px;
+  background-color: white;
+}
+
+.search-circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75px;
+  width: 75px;
+  border-radius: 100px;
+  border: 6px solid rgba(255, 255, 255, 0);
+  border-top: 6px solid rgb(230, 183, 62);
+  border-right: 6px solid rgb(230, 183, 62);
+  border-bottom: 6px solid rgb(230, 183, 62);
+  animation: ani 3s linear infinite;
+}
+
+.search-circle-two {
+  height: 57.5px;
+  width: 57.5px;
+  border-radius: 75px;
+  border: 4px solid rgba(255, 255, 255, 0);
+  border-top: 4px solid rgb(230, 183, 62);
+  border-right: 4px solid rgb(230, 183, 62);
+  border-left: 4px solid rgb(230, 183, 62);
+  animation: ani 3s linear infinite;
 }
